--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -44,9 +44,9 @@ jobs:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
           heroku_app_name: 'iatf-bot' #Must be unique in Heroku
           heroku_email: 'sangalesbenes@uoc.edu'
-          healthcheck: 'https://iatf-bot.herokuapp.com/health'
-          checkstring: 'ok'
-          rollbackonhealthcheckfailed: true
+          #healthcheck: 'https://iatf-bot.herokuapp.com/health'
+          #checkstring: 'ok'
+          #rollbackonhealthcheckfailed: true
           #appdir: 'src'
   tag_release:
     if: ${{ github.event_name == 'push' && !contains(github.event.head_commit.message, '#skip') }}
