--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -48,6 +48,8 @@ jobs:
           #checkstring: 'ok'
           #rollbackonhealthcheckfailed: true
           #appdir: 'src'
+        env:
+          TOKEN: ${{secrets.TOKEN}}
   tag_release:
     if: ${{ github.event_name == 'push' && !contains(github.event.head_commit.message, '#skip') }}
     needs: [simple_deployment_pipeline]
