--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -49,7 +49,7 @@ jobs:
           #rollbackonhealthcheckfailed: true
           #appdir: 'src'
         env:
-          TOKEN: ${{secrets.TOKEN}}
+          HD_TOKEN: ${{secrets.TOKEN}}
   tag_release:
     if: ${{ github.event_name == 'push' && !contains(github.event.head_commit.message, '#skip') }}
     needs: [simple_deployment_pipeline]
