--- a/package.json
+++ b/package.json
@@ -6,10 +6,13 @@
     "express": "^4.18.1"
   },
   "devDependencies": {
+    "@babel/eslint-parser": "^7.19.1",
+    "@babel/preset-env": "^7.19.1",
+    "eslint": "^8.23.1",
     "nodemon": "^2.0.19"
   },
   "scripts": {
-    "dev": "npx nodemon index.js",
-    "start": "node index.js"
+    "dev": "npx nodemon main.js",
+    "start": "node main.js"
   }
 }
