fix deploy, and package.json

--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   },
   "scripts": {
     "dev": "npx nodemon main.js",
-    "start": "node main.js"
+    "start": "node main.js",
+    "lint": "eslint ."
   },
   "main": "main.js"
 }
