--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,7 +23,7 @@ jobs:
       - name: npm install
         run: npm install
       - name: lint
-        run: npm run eslint
+        run: npm run lint
       #- name: Test Error
       #if: ${{ failure() }}
       #uses: rjstone/discord-webhook-notify@v1
