--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
     "@discordjs/rest": "^1.1.0",
     "discord.js": "^14.3.0",
     "dotenv": "^16.0.2",
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "source-map-loader": "^4.0.0",
+    "ts-loader": "^9.4.1",
+    "ts-node": "^10.9.1"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.19.1",
@@ -12,9 +15,9 @@
     "nodemon": "^2.0.19"
   },
   "scripts": {
-    "dev": "npx nodemon main.js",
-    "start": "node main.js",
+    "dev": "npx nodemon ./lib/main.ts",
+    "start": "node ./lib/main.ts",
     "lint": "eslint ."
   },
-  "main": "main.js"
+  "main": "./lib/main.ts"
 }
