--- a/package.json
+++ b/package.json
@@ -3,20 +3,23 @@
     "@discordjs/rest": "^1.1.0",
     "discord.js": "^14.3.0",
     "dotenv": "^16.0.2",
-    "express": "^4.18.1",
-    "source-map-loader": "^4.0.0",
-    "ts-loader": "^9.4.1",
-    "ts-node": "^10.9.1"
+    "express": "^4.18.1"
   },
   "devDependencies": {
+    "typescript": "^4.8.4",
     "@babel/eslint-parser": "^7.19.1",
     "@babel/preset-env": "^7.19.1",
+    "@types/express": "^4.17.14",
+    "@types/node": "^18.8.1",
+    "ts-loader": "^9.4.1",
+    "ts-node": "^10.9.1",
+    "source-map-loader": "^4.0.0",
     "eslint": "^8.23.1",
     "nodemon": "^2.0.19"
   },
   "scripts": {
     "dev": "npx nodemon ./lib/main.ts",
-    "start": "node ./lib/main.ts",
+    "start": "ts-node ./lib/main.ts",
     "lint": "eslint ."
   },
   "main": "./lib/main.ts"
