--- a/package.json
+++ b/package.json
@@ -6,16 +6,17 @@
     "express": "^4.18.1"
   },
   "devDependencies": {
-    "typescript": "^4.8.4",
     "@babel/eslint-parser": "^7.19.1",
     "@babel/preset-env": "^7.19.1",
     "@types/express": "^4.17.14",
     "@types/node": "^18.8.1",
+    "@typescript-eslint/parser": "^5.39.0",
+    "eslint": "^8.23.1",
+    "nodemon": "^2.0.19",
+    "source-map-loader": "^4.0.0",
     "ts-loader": "^9.4.1",
     "ts-node": "^10.9.1",
-    "source-map-loader": "^4.0.0",
-    "eslint": "^8.23.1",
-    "nodemon": "^2.0.19"
+    "typescript": "^4.8.4"
   },
   "scripts": {
     "dev": "npx nodemon ./lib/main.ts",
