--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
     "discord.js": "^14.3.0",
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
-    "ts-node": "^10.9.1"
+    "ts-node": "^10.9.1",
+    "@types/express": "^4.17.14"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.19.1",
     "@babel/preset-env": "^7.19.1",
-    "@types/express": "^4.17.14",
     "@types/node": "^18.8.1",
     "@typescript-eslint/parser": "^5.39.0",
     "eslint": "^8.23.1",
